# l2p

./: .gitignore  LICENSE  Makefile
android/app/: CMakeLists.txt  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: Platform.cpp  main.cpp  native-lib.cpp
android/app/src/main/java/fi/haippirinki/l2p/: MainActivity.java  Platform.java
android/app/src/main/res/values/: strings.xml
assets/fonts/: eurostile_extended_18px.fnt  eurostile_extended_18px_0.dds  opensans_semibold_100px_3px_outline.fnt  opensans_semibold_100px_3px_outline_0.dds
assets/images/: lena.dds
assets/levels/: level-1  level-1.level  level-2.level
assets/shaders/: basic.fs  basic.vs  game.fs  game.vs  postprocess.fs  postprocess.vs  text.fs  text.vs
common/: Application.cpp  Application.h  Batcher.cpp  Batcher.h  BitmapFont.cpp  BitmapFont.h  DDSLoader.cpp  DDSLoader.h  File.cpp  File.h  GameState.cpp  GameState.h  KTXLoader.cpp  KTXLoader.h  L2PApplication.cpp  L2PApplication.h  Math.cpp  Math.h  MenuState.cpp  MenuState.h  OpenGL.cpp  OpenGL.h  Platform.h  PostProcess.cpp  PostProcess.h  Profile.cpp  Profile.h  State.cpp  State.h  StateMachine.cpp  StateMachine.h  TestState.cpp  TestState.h  TextRenderer.cpp  TextRenderer.h  Util.cpp  Util.h  World.cpp  World.h
common/Render/: Device.cpp  Device.h
ios/: Info.plist  Platform.mm  main.m  main.mm
levels/: gen.py  level-1.py  level-2.py  level-3.py  level-4.py  level-5.py  level-med-0.py  level-xhard-0.py  level-xhard-1.py
osx/: main.m  main.mm
win32/: GL_3_3.cpp  GL_3_3.h  Platform.cpp  l2p.sln  l2p.vcxproj  l2p.vcxproj.filters  main.cpp
(+2 files in other folders)
